--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "workbench.colorCustomizations": {
         "commandCenter.border": "#e7e7e799",
-        "panel.border": "#fa1b49",
-        "sash.hoverBorder": "#fa1b49",
-        "tab.activeBorder": "#fa1b49",
-        "titleBar.activeBackground": "#dd0531",
+        "panel.border": "#2f7c47",
+        "sash.hoverBorder": "#2f7c47",
+        "tab.activeBorder": "#2f7c47",
+        "titleBar.activeBackground": "#215732",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#dd053199",
+        "titleBar.inactiveBackground": "#21573299",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#dd0531"
+    "peacock.remoteColor": "#215732"
 }
